--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "markdown-it": "^13.0.1",
     "next": "12.1.6",
+    "next-seo": "^5.4.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hot-toast": "^2.2.0",
+    "react-markdown": "^8.0.3",
+    "react-markdown-editor-lite": "^1.3.2",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/react-syntax-highlighter": "^15.5.2",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.3",
     "typescript": "4.7.3"
   }
 }
