--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
     "next": "12.1.6",
     "next-seo": "^5.4.0",
