--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
 {
   // "extends": "next/core-web-vitals"
-  "extends": "next",
-  "rules": {
-    "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off"
-  }
+  "parser": "babel-eslint"
+  // "extends": "next",
+  // "rules": {
+  //   "react/no-unescaped-entities": "off",
+  //   "@next/next/no-page-custom-font": "off"
+  // }
 }
