--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "18.0.5",
     "@types/react-syntax-highlighter": "^15.5.2",
     "autoprefixer": "^10.4.7",
+    "babel-eslint": "^10.1.0",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
