--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,8 @@
 {
   // "extends": "next/core-web-vitals"
-  "parser": "babel-eslint"
-  // "extends": "next",
-  // "rules": {
-  //   "react/no-unescaped-entities": "off",
-  //   "@next/next/no-page-custom-font": "off"
-  // }
+  "extends": "next",
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
+  }
 }
